Fix Bug 134590 Duplicated Address List. p=Siva <sivakrishna@synovel.com>,r=me,sr=Neil